--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>短歌投稿サイトUtakataへようこそ！</p>
-
-<p>下記のリンクをクリックしてメールアドレスを認証し、アカウント登録を完了させてください。</p>
+<p>下記のリンクをクリックしてメールアドレスを認証してください。</p>
 
 <p><%= link_to 'メールアドレスを認証する', confirmation_url(@resource, confirmation_token: @token) %></p>
+
+<p>--<br />短歌投稿サイトUtakata</p>
