--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,47 +1,72 @@
-<h4 class="mt-5 mx-auto form-group col-md-4">プロフィール編集</h4>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <% if resource.errors.present? %>
-    <div class="mx-auto col-md-4 alert alert-warning">
-      <%= devise_error_messages! %>
+<ul class="nav nav-tabs col-md-5 mx-auto mt-3" id="myTab" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">プロフィール</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="mail-tab" data-toggle="tab" href="#mail" role="tab" aria-controls="mail" aria-selected="false">メールアドレス</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="password-tab" data-toggle="tab" href="#password" role="tab" aria-controls="password" aria-selected="false">パスワード</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="delete-tab" data-toggle="tab" href="#delete" role="tab" aria-controls="delete" aria-selected="false">アカウント削除</a>
+  </li>
+</ul>
+<div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
+    <div class="tab-pane fade" id="mail" role="tabpanel" aria-labelledby="mail-tab">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <% if resource.errors.present? %>
+          <div class="mx-auto col-md-4 alert alert-warning mt-3">
+            <%= devise_error_messages! %>
+          </div>
+        <% end %>
+    
+        <div class="field form-group mx-auto col-md-4 mt-3">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+        </div>
+    
+        <div class="mt-3 field form-group mx-auto col-md-4">
+          <%= f.label :現在のパスワード %><br />
+          <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
+        </div>
+    
+        <div class="orm-group actions mx-auto col-md-4">
+          <%= f.submit "変更する", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
     </div>
-  <% end %>
+    <div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <% if resource.errors.present? %>
+          <div class="mx-auto col-md-4 alert alert-warning mt-3">
+            <%= devise_error_messages! %>
+          </div>
+        <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="mt-3 field form-group mx-auto col-md-4">
+          <%= f.label :現在のパスワード %><br />
+          <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
+        </div>
+      
+        <div class="field form-group mx-auto col-md-4">
+          <%= f.label :新しいパスワード（6文字以上） %><br />
+          <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+        </div>
+    
+        <div class="field form-group mx-auto col-md-4">
+          <%= f.label :新しいパスワード（確認用） %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+        </div>
+    
+        <div class="orm-group actions mx-auto col-md-4">
+          <%= f.submit "変更する", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+  <div class="tab-pane fade" id="delete" role="tabpanel" aria-labelledby="delete-tab">
+
+<div class="field form-group mx-auto col-md-4 mt-3"> <%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-primary' %></div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
