--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
       <% if user_signed_in? %>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <%= link_to 'プロフィール', edit_user_registration_path, :class => 'nav-link' %>
+            <%= link_to 'プロフィール', edit_user_registration_path, method: :get,:class => 'nav-link' %>
           </li>
           <li class="nav-item active">
             <%= link_to 'Logout', destroy_user_session_path, method: :delete,:class => 'nav-link' %>
