--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,7 +13,26 @@
   </li>
 </ul>
 <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
+    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+      <% if resource.errors.present? %>
+          <div class="mx-auto col-md-4 alert alert-warning mt-3">
+            <%= devise_error_messages! %>
+          </div>
+        <% end %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= f.file_field :avatar %>
+        <%= f.submit %>
+
+        <div class="field form-group mx-auto col-md-4">
+          <%= f.label :ハンドルネーム %><br />
+          <%= f.text_field :name, autofocus: true, class: 'form-control' %>
+        </div>
+
+        <div class="orm-group actions mx-auto col-md-4">
+          <%= f.submit "変更する", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
     <div class="tab-pane fade" id="mail" role="tabpanel" aria-labelledby="mail-tab">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <% if resource.errors.present? %>
@@ -25,11 +44,6 @@
         <div class="field form-group mx-auto col-md-4 mt-3">
           <%= f.label :email %><br />
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-        </div>
-    
-        <div class="mt-3 field form-group mx-auto col-md-4">
-          <%= f.label :現在のパスワード %><br />
-          <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
         </div>
     
         <div class="orm-group actions mx-auto col-md-4">
@@ -44,19 +58,14 @@
             <%= devise_error_messages! %>
           </div>
         <% end %>
-
-        <div class="mt-3 field form-group mx-auto col-md-4">
-          <%= f.label :現在のパスワード %><br />
-          <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
-        </div>
       
-        <div class="field form-group mx-auto col-md-4">
-          <%= f.label :新しいパスワード（6文字以上） %><br />
+        <div class="field form-group mx-auto col-md-4 mt-3">
+          <%= f.label :パスワード（6文字以上） %><br />
           <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
         </div>
     
         <div class="field form-group mx-auto col-md-4">
-          <%= f.label :新しいパスワード（確認用） %><br />
+          <%= f.label :パスワード（確認用） %><br />
           <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
         </div>
     
@@ -66,7 +75,6 @@
       <% end %>
     </div>
   <div class="tab-pane fade" id="delete" role="tabpanel" aria-labelledby="delete-tab">
-
-<div class="field form-group mx-auto col-md-4 mt-3"> <%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-primary' %></div>
+    <div class="field form-group mx-auto col-md-4 mt-3"> <%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-primary' %></div>
   </div>
 </div>
