--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,13 +15,17 @@
 <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
       <% if resource.errors.present? %>
-          <div class="mx-auto col-md-4 alert alert-warning mt-3">
-            <%= devise_error_messages! %>
-          </div>
-        <% end %>
+        <div class="mx-auto col-md-4 alert alert-warning mt-3">
+          <%= devise_error_messages! %>
+        </div>
+      <% end %>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <%= f.file_field :avatar %>
-        <%= f.submit %>
+        
+        <div class="field form-group mx-auto col-md-4 mt-3">
+          <%= f.label :アイコン %><br />
+          <%= image_tag current_user.avatar.url, class: 'mb-2' %>
+          <%= f.file_field :avatar, class: 'filestyle', "data-buttonBefore": true %>
+        </div>  
 
         <div class="field form-group mx-auto col-md-4">
           <%= f.label :ハンドルネーム %><br />
