--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,64 @@
   padding-top: 0;
   padding-bottom: 0;
 }
+
+.vertical {
+  -webkit-writing-mode: vertical-rl;
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
+  float: right;
+  max-width: 31em;
+}
+
+.verticalc {
+  -webkit-writing-mode: vertical-rl;
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
+  position: absolute;
+  
+      left: 53%;
+      top: 6em;
+  font-family: serif;
+  font-size: 1em;
+}
+
+.verticala {
+  writing-mode: initial;
+      transform: rotate(90deg);
+      transform-origin: top left;
+      max-width: 31em;
+      
+      position: absolute;
+      left: 50%;
+      top: 6em;
+   
+      
+}
+
+.verticalb {
+  writing-mode: initial;
+      transform: rotate(90deg);
+      transform-origin: top left;
+  
+   position: absolute;
+      left: 45%;
+      top: 6em;
+      
+}
+
+.tanka {
+  -webkit-writing-mode: vertical-rl;
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
+  font-family: serif;
+  font-size: 1em;
+  width:100%;
+  height:100%;
+  overflow: scroll;
+}
+
+.paginate {
+  position: absolute;
+  bottom: 0;
+
+}
