--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,5 @@
+<% @title = '設定' %>
+
 <ul class="nav nav-tabs col-md-5 mx-auto mt-3" id="myTab" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">プロフィール</a>
@@ -10,85 +12,59 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" id="delete-tab" data-toggle="tab" href="#delete" role="tab" aria-controls="delete" aria-selected="false">アカウント削除</a>
-  </li>
+  <li>
 </ul>
 <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-      <% if resource.errors.present? %>
-        <div class="mx-auto col-md-4 alert alert-warning mt-3">
-          <%= devise_error_messages! %>
-        </div>
-      <% end %>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        
-        <div class="field form-group mx-auto col-md-4 mt-3">
-          <%= f.label :アイコン %><br />
-          <%= image_tag current_user.avatar.url, class: 'mb-2' %>
-          <%= f.file_field :avatar, class: 'filestyle', "data-buttonBefore": true %>
-        </div>  
-
-        <div class="field form-group mx-auto col-md-4">
-          <%= f.label :ハンドルネーム %><br />
-          <%= f.text_field :name, autofocus: true, class: 'form-control' %>
-        </div>
-
-        <div class="field form-group mx-auto col-md-4">
-          <%= f.label :自己紹介 %><br />
-          <%= f.text_area :profile, autofocus: true, class: 'form-control', rows: 2 %>
-        </div>
-
-        <div class="field form-group mx-auto col-md-4">
-          <%= f.label :ウェブサイト %><br />
-          <%= f.text_field :url, autofocus: true, class: 'form-control' %>
-        </div>
-
-        <div class="orm-group actions mx-auto col-md-4">
-          <%= f.submit "変更する", class: 'btn btn-primary' %>
-        </div>
-      <% end %>
-    </div>
-    <div class="tab-pane fade" id="mail" role="tabpanel" aria-labelledby="mail-tab">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <% if resource.errors.present? %>
-          <div class="mx-auto col-md-4 alert alert-warning mt-3">
-            <%= devise_error_messages! %>
-          </div>
-        <% end %>
-    
-        <div class="field form-group mx-auto col-md-4 mt-3">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-        </div>
-    
-        <div class="orm-group actions mx-auto col-md-4">
-          <%= f.submit "変更する", class: 'btn btn-primary' %>
-        </div>
-      <% end %>
-    </div>
-    <div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <% if resource.errors.present? %>
-          <div class="mx-auto col-md-4 alert alert-warning mt-3">
-            <%= devise_error_messages! %>
-          </div>
-        <% end %>
-      
-        <div class="field form-group mx-auto col-md-4 mt-3">
-          <%= f.label :パスワード（6文字以上） %><br />
-          <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-        </div>
-    
-        <div class="field form-group mx-auto col-md-4">
-          <%= f.label :パスワード（確認用） %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
-        </div>
-    
-        <div class="orm-group actions mx-auto col-md-4">
-          <%= f.submit "変更する", class: 'btn btn-primary' %>
-        </div>
-      <% end %>
-    </div>
+  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <div class="field form-group mx-auto col-md-4 mt-3">
+        <%= f.label :アイコン %><br />
+        <%= image_tag current_user.avatar.url, class: 'mb-2' %>
+        <%= f.file_field :avatar, class: 'filestyle', "data-buttonBefore": true %>
+      </div>  
+      <div class="field form-group mx-auto col-md-4">
+        <%= f.label :ハンドルネーム %><br />
+        <%= f.text_field :name, autofocus: true, class: 'form-control' %>
+      </div>
+      <div class="field form-group mx-auto col-md-4">
+        <%= f.label :自己紹介 %><br />
+        <%= f.text_field :profile, autofocus: true, class: 'form-control' %>
+      </div>
+      <div class="orm-group actions mx-auto col-md-4">
+        <%= f.submit "変更する", class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
+  <div class="tab-pane fade" id="mail" role="tabpanel" aria-labelledby="mail-tab">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <div class="field form-group mx-auto col-md-4 mt-3">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+      </div>
+  
+      <div class="orm-group actions mx-auto col-md-4">
+        <%= f.submit "変更する", class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
+  <div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <div class="field form-group mx-auto col-md-4 mt-3">
+        <%= f.label :パスワード（6文字以上） %><br />
+        <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+      </div>
+  
+      <div class="field form-group mx-auto col-md-4">
+        <%= f.label :パスワード（確認用） %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+      </div>
+  
+      <div class="orm-group actions mx-auto col-md-4">
+        <%= f.submit "変更する", class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
   <div class="tab-pane fade" id="delete" role="tabpanel" aria-labelledby="delete-tab">
-    <div class="field form-group mx-auto col-md-4 mt-3"> <%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-primary' %></div>
+    <div class="field form-group mx-auto col-md-4 mt-3"> <%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "Are yousure?" }, method: :delete, class: 'btn btn-primary' %></div>
   </div>
 </div>
