Add page titles

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,3 +1,5 @@
+<% @title = 'アカウント登録用メール再送信' %>
+
 <h4 class="mt-5 mx-auto form-group col-md-4">アカウント登録用メール再送信</h4>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
