--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,5 @@
+<% @title = 'パスワード再設定用メール送信' %>
+
 <h4 class="mt-5 mx-auto form-group col-md-4">パスワード再設定用メール送信</h4>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
