Modify navbar layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,6 +69,10 @@
   padding-bottom: 0;
 }
 
+.navbar-right{
+  text-align: right;
+}
+
 .verticald {
   -webkit-writing-mode: vertical-rl;
   -ms-writing-mode: tb-rl;
