--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,7 +19,7 @@
           </li>
         </ul>
       <% else %>
-        <ul class="navbar-nav ml-md-auto">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <%= link_to '新規登録', new_user_registration_path, class: 'nav-link' %>
           </li>
