Modify navbar layout

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #0095d9;">
+  <nav class="navbar navbar-expand navbar-dark" style="background-color: #0095d9;">
     <%= link_to 'Utakata', root_path, class: 'navbar-brand' %>
     
       <% if user_signed_in? %>
