--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,10 +65,8 @@
   padding-bottom: 0;
 }
 
-.verticald {
-  -webkit-writing-mode: vertical-rl;
-  -ms-writing-mode: tb-rl;
-  writing-mode: vertical-rl;
-  float: right;
-  max-width: 31em;
+h6 {
+  margin-right: 1em;
+  margin-left: 0;
+  margin-top: 5em;
 }
