--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,33 +1,34 @@
 <header>
   <nav class="navbar navbar-expand navbar-dark" style="background-color: #0095d9;">
     <%= link_to 'Utakata', root_path, class: 'navbar-brand' %>
-    
-      <% if user_signed_in? %>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag current_user.avatar.url(:medium) %>
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <%= link_to '投稿した短歌', posts_path(user_id: current_user), method: :get, class: 'dropdown-item' %>
-              <%= link_to '設定', edit_user_registration_path, method: :get, class: 'dropdown-item' %>
-              <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
-            </div>
-          </li>
-          <li class="form-inline">
-            <%= link_to '投稿する', new_post_path, method: :get, class: 'btn btn-sm btn-primary-reversed' %>
-          </li>
-        </ul>
-      <% else %>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <%= link_to '新規登録', new_user_registration_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
-          </li>
-        </ul>
-      <% end %>
-    
+    <% if user_signed_in? %>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"aria-expanded="false">
+            <%= image_tag current_user.avatar.url(:medium) %>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <%= link_to 'マイページ', posts_path(user_id: current_user), method: :get, class: 'dropdown-item' %>
+            <div class="dropdown-divider"></div>
+            <%= link_to '新しい歌', root_path, method: :get, class: 'dropdown-item' %>
+            <div class="dropdown-divider"></div>
+            <%= link_to '設定', edit_user_registration_path, method: :get, class: 'dropdown-item' %>
+            <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
+          </div>
+        </li>
+        <li class="form-inline">
+          <%= link_to '投稿する', new_post_path, method: :get, class: 'btn btn-sm btn-primary-reversed' %>
+        </li>
+      </ul>
+    <% else %>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <%= link_to '新規登録', new_user_registration_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
+        </li>
+      </ul>
+    <% end %>   
   </nav>
 </header>
