--- a/app/views/new_arrivals/index.html.erb
+++ b/app/views/new_arrivals/index.html.erb
@@ -1,7 +1,11 @@
 <div class = "vertical serif tanka-index mt-3">
   <h6>人気の歌 | <b>新しい歌</b></h6>
   <% @posts.each do |post| %>
-    <p><%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %></p>
+    <p>
+      <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %>
+      <% user = User.find(post.user_id) %>
+      <%= link_to (image_tag user.avatar.url(:small), align: 'right'), posts_path(user_id: user.id), method: :get %>
+    </p>
   <% end %>
   <%= paginate @posts %>
 </div>
