--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <% @title = @post.tanka + ' / ' + @user.name %>
 
 <div class="mt-3 vertical serif mx-auto height-100">
-  <%= image_tag @user.avatar.url(:medium), align: 'center' %>&nbsp;
+  <%= link_to (image_tag @user.avatar.url(:medium), align: 'center'), posts_path(user_id: @user.id), method: :get, class: 'tanka-show tanka-link' %>&nbsp;
   <%= link_to @user.name, posts_path(user_id: @user.id), method: :get, class: 'tanka-show tanka-link' %>&nbsp;
   <%= @post.created_at.strftime('%Y.%-m.%-d') %>&nbsp;
   <% if @user == current_user %>
