--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,8 +3,8 @@
 <div class = "vertical serif tanka-index mt-3">
   <div class="margin-right">
     <%= image_tag @user.avatar.url(:original), align: 'center' %>&nbsp;
-    <span class="tanka-show"><b><%= @user.name %></b></span>&nbsp;
-    <%= @user.profile %>
+    <span class="tanka-show"><%= @user.name %></span>&nbsp;
+    <span class="profile"><%= @user.profile %></span>
   </div>
   <% @posts.each do |post| %>
     <p><%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %></p>
