--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,9 +5,9 @@
   <%= link_to @user.name, posts_path(user_id: @user.id), method: :get, class: 'tanka-show tanka-link' %>&nbsp;
   <%= @post.created_at.strftime('%Y.%-m.%-d') %>&nbsp;
   <% if Rails.env == 'production' %>
-    <a href="<%= ('https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + @post.tanka + '／' + @user.name + '&hashtags=utakatanka') %>"><%= image_tag("http://utakata.s3.amazonaws.com/Twitter_Social_Icon_Circle_Color.png", align: 'center') %></a>&nbsp;
+    <a href="<%= ('https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + @post.tanka + '%0a／' + @user.name + '%0a') %>"><%= image_tag("http://utakata.s3.amazonaws.com/Twitter_Social_Icon_Circle_Color.png", align: 'center') %></a>&nbsp;
   <% else %>
-    <a href="<%= ('https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + @post.tanka + '／' + @user.name + '&hashtags=utakatanka') %>"><%= image_tag("/assets/Twitter_Social_Icon_Circle_Color.png", align: 'center') %></a>&nbsp;
+    <a href="<%= ('https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + @post.tanka + '%0a／' + @user.name + '%0a') %>"><%= image_tag("/assets/Twitter_Social_Icon_Circle_Color.png", align: 'center') %></a>&nbsp;
   <% end %>
   <% if @user == current_user %>
     <%= link_to '削除', @tanka, method: :delete, data: { confirm: '本当に削除しますか？' } %>
