--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,7 +26,7 @@
     <% else %>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <%= link_to '新規登録', new_user_registration_path, class: 'nav-link' %>
+          <%= link_to '登録', new_user_registration_path, class: 'nav-link' %>
         </li>
         <li class="nav-item active">
           <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
