--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,6 @@
 <header>
   <nav class="navbar navbar-expand navbar-dark" style="background-color: #0095d9;">
     <%= link_to 'Utakata', root_path, class: 'navbar-brand' %>
-    <%= form_tag(tanka_search_path, method: :get) do %>
-      <%= text_field_tag :search, '', autofocus: true, class: 'form-control form-control-sm form-width', type: 'search', placeholder: '短歌 / 歌人を検索' %>
-    <% end %>
     <% if user_signed_in? %>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
@@ -17,6 +14,12 @@
             <div class="dropdown-divider"></div>
             <%= link_to '設定', edit_user_registration_path, method: :get, class: 'dropdown-item' %>
             <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
+            <div class="dropdown-divider"></div>
+            <div class="px-2 py-2">
+              <%= form_tag(tanka_search_path, method: :get) do %>
+                <%= text_field_tag :search, '', autofocus: true, class: 'form-control form-control-sm', type: 'search', placeholder: '短歌 / 歌人を検索' %>
+              <% end %>
+            </div>
           </div>
         </li>
         <li class="nav-item form-inline">
@@ -24,6 +27,9 @@
         </li>
       </ul>
     <% else %>
+      <%= form_tag(tanka_search_path, method: :get) do %>
+        <%= text_field_tag :search, '', autofocus: true, class: 'form-control form-control-sm form-width', type: 'search', placeholder: '短歌 / 歌人を検索' %>
+      <% end %>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <%= link_to '登録', new_user_registration_path, class: 'nav-link' %>
