--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
             <%= image_tag current_user.avatar.url(:medium) %>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <%= link_to 'マイページ', posts_path(user_id: current_user), method: :get, class: 'dropdown-item' %>
+            <%= link_to 'マイページ', user_path(id: current_user), method: :get, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
             <%= link_to '新しい歌', root_path, method: :get, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
@@ -16,7 +16,7 @@
             <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
             <div class="px-2 py-2">
-              <%= form_tag(tanka_search_path, method: :get) do %>
+              <%= form_tag(search_posts_path, method: :get) do %>
                 <%= text_field_tag :search, '', autofocus: true, class: 'form-control form-control-sm', type: 'search', placeholder: '短歌 / 歌人を検索' %>
               <% end %>
             </div>
@@ -27,7 +27,7 @@
         </li>
       </ul>
     <% else %>
-      <%= form_tag(tanka_search_path, method: :get) do %>
+      <%= form_tag(search_posts_path, method: :get) do %>
         <%= text_field_tag :search, '', autofocus: true, class: 'form-control form-control-sm form-width', type: 'search', placeholder: '短歌 / 歌人を検索' %>
       <% end %>
       <ul class="navbar-nav ml-auto">
