--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -2,17 +2,17 @@
 
 <div class = "vertical serif tanka-index mt-3">
   <h6>
-    <%= search_word(@search)%>：<b>全体</b>｜<!--
+    <%= search_word(@search)%>：<b><%= all_tankas %></b>｜<!--
     --><% if user_signed_in? %><!--
     --><%= link_to '自分', tanka_search_mine_path(search: @search), method: :get, class: 'tanka-link' %>｜<!--
     --><% end %><!--
-    --><%= link_to '歌人', kajin_search_path(search: @search), method: :get, class: 'tanka-link' %>
+    --><%= link_to '歌人', search_users_path(search: @search), method: :get, class: 'tanka-link' %>
   </h6>
   <% @posts.each do |post| %>
     <p>
       <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %>
       <% user = User.find(post.user_id) %>
-      <%= link_to (image_tag user.avatar.url(:small), align: 'right'), posts_path(user_id: user.id), method: :get %>
+      <%= link_to (image_tag user.avatar.url(:small), align: 'right'), user_path(id: user.id), method: :get %>
     </p>
   <% end %>
   <%= paginate @posts %>
