--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 <% @title = @post.tanka + '／' + @user.name %>
 
 <div class="mt-3 vertical serif mx-auto height-100">
-  <%= link_to (image_tag @user.avatar.url(:medium), align: 'center'), posts_path(user_id: @user.id), method: :get, class: 'tanka-link' %>&nbsp;
-  <%= link_to @user.name, posts_path(user_id: @user.id), method: :get, class: 'tanka-show tanka-link' %>&nbsp;
+  <%= link_to (image_tag @user.avatar.url(:medium), align: 'center'), user_path(id: @user.id), method: :get, class: 'tanka-link' %>&nbsp;
+  <%= link_to @user.name, user_path(id: @user.id), method: :get, class: 'tanka-show tanka-link' %>&nbsp;
   <%= @post.created_at.strftime('%Y.%-m.%-d') %>&nbsp;
   <% if Rails.env == 'production' %>
     <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + @post.tanka + '%0a／' + @user.name + '%0a' %>"><%= image_tag("http://utakata.s3.amazonaws.com/Twitter_Social_Icon_Circle_Color.png", align: 'center') %></a>&nbsp;
