Make it possible to follow users

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,8 +46,17 @@
   font-size: 1.2em;
 }
 
-.profile {
+.kajin {
+  font-size: 1.3em;
+}
+
+.sm {
   font-size: 0.9em;
+}
+
+.profile {
+  padding: 1em;
+  border: 1px solid #0095d9;
 }
 
 .serif {
