--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,6 +8,7 @@
             <%= image_tag current_user.avatar.url(:medium) %>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <%= link_to 'タイムライン', timeline_posts_path, method: :get, class: 'dropdown-item' %>
             <%= link_to 'マイページ', user_path(id: current_user), method: :get, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
             <%= link_to '新しい歌', root_path, method: :get, class: 'dropdown-item' %>
