--- a/app/views/users/follow.html.erb
+++ b/app/views/users/follow.html.erb
@@ -1,12 +1,8 @@
-<% @title = '歌人検索' %>
+<% @title = @user.name + 'のフォロー' %>
 
 <div class = "vertical serif tanka-index mt-3">
   <h6>
-    <%= search_word(@search) %>：<%= link_to all_tankas, search_posts_path(search: @search), method: :get %>｜<!--
-    --><% if user_signed_in? %><!--
-      --><%= link_to '自分', tanka_search_mine_path(search: @search), method: :get %>｜<!--
-    --><% end %><!--
-    -->歌人
+    <%= @user.name %>のフォロー｜<%= link_to 'フォロワー', follower_user_path(id: @user.id), method: :get %>
   </h6>
   <% @users.each do |user| %>
     <p>
