Make it possible to like tankas

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -97,3 +97,11 @@ h6 {
   -ms-writing-mode: rl;
   writing-mode: horizontal-tb;
 }
+
+.hearts {
+  color: #e60033;
+}
+
+.hearts:hover {
+  color: #e60033;
+}
