--- a/app/views/posts/search_mine.html.erb
+++ b/app/views/posts/search_mine.html.erb
@@ -6,7 +6,8 @@
   </h6>
   <% @posts.each do |post| %>
     <p>
-      <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %>
+      <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
+      <span class="hearts">&hearts;</span><span class="sm horizontal hearts"><%= post.followers_by_type_count('User') %></span>
     </p>
   <% end %>
   <%= paginate @posts %>
