--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,16 @@
   <% else %>
     <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + @post.tanka + '%0a／' + @user.name + '%0a' %>"><%= image_tag("/assets/Twitter_Social_Icon_Circle_Color.png", align: 'center') %></a>&nbsp;
   <% end %>
+  <% if user_signed_in? && current_user.id != @post.user_id %>
+    <% if current_user.following?(@post) %>
+      <%= link_to '&hearts;'.html_safe, favorite_path(id: @post.id), method: :delete, class: 'hearts tanka-show' %><!--
+    --><% else %><!--
+      --><%= link_to '&#9825;'.html_safe, favorites_path(follow: @post.id), method: :post, class: 'hearts tanka-show' %><!--
+    --><% end %><!--
+  --><% else %><!--
+    --><span class="hearts tanka-show">&hearts;</span><!--
+  --><% end %><!--
+  --><%= link_to @post.followers_by_type_count('User'), follower_post_path(id: @post.id), method: :get, class: 'horizontal hearts tanka-show' %>
   <% if @user == current_user %>
     <%= link_to '削除', @tanka, method: :delete, data: { confirm: '本当に削除しますか？' } %>
   <% end %>
