--- a/app/views/posts/timeline.html.erb
+++ b/app/views/posts/timeline.html.erb
@@ -1,12 +1,6 @@
 <% @title = 'タイムライン' %>
 
 <div class="vertical serif tanka-index mt-3">
-  <% @posts.each do |post| %>
-    <p>
-      <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %>
-      <% user = User.find(post.user_id) %>
-      <%= link_to (image_tag user.avatar.url(:small), align: 'right'), user_path(id: user.id), method: :get %>
-    </p>
-  <% end %>
+  <%= render 'layouts/posts' %>
   <%= paginate @posts %>
 </div>
