--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,7 +11,7 @@
   <% end %>
   <% if user_signed_in? && current_user.id != @post.user_id %>
     <% if current_user.following?(@post) %>
-      <%= link_to '&hearts;'.html_safe, favorite_path(id: @post.id), method: :delete, class: 'hearts tanka-show' %><!--
+      <%= link_to '&#9829;'.html_safe, favorite_path(id: @post.id), method: :delete, class: 'hearts tanka-show' %><!--
     --><% else %><!--
       --><%= link_to '&#9825;'.html_safe, favorites_path(follow: @post.id), method: :post, class: 'hearts tanka-show' %><!--
     --><% end %><!--
