--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <div class = "vertical serif tanka-index mt-3">
   <div class="margin-right">
     <%= image_tag @user.avatar.url(:original), align: 'center' %>&nbsp;
-    <span class="kajin"><%= @user.name %></span>&nbsp;
+    <span class="tanka-show"><%= @user.name %></span>&nbsp;
     <% if Rails.env == 'production' && @user.twitter_id.present? %>
       <a href="<%= 'https://twitter.com/intent/follow?screen_name='  + @user.twitter_id %>"><%= image_tag("http://utakata.s3.amazonaws.com/Twitter_Social_Icon_Circle_Color.png", align: 'center') %></a>&nbsp;
     <% elsif @user.twitter_id.present? %>
@@ -31,7 +31,7 @@
       <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
       <% if user_signed_in? && current_user.id != post.user_id %>
         <% if current_user.following?(post) %>
-          <%= link_to '&hearts;'.html_safe, favorite_path(id: post.id), method: :delete, class: 'hearts' %><!--
+          <%= link_to '&#9829;'.html_safe, favorite_path(id: post.id), method: :delete, class: 'hearts' %><!--
         --><% else %><!--
           --><%= link_to '&#9825;'.html_safe, favorites_path(follow: post.id), method: :post, class: 'hearts' %><!--
         --><% end %><!--
