--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,9 +96,12 @@ h6 {
 
 .hearts {
   color: #e60033;
-  vertical-align: middle;
 }
 
 .hearts:hover {
   color: #e60033;
+}
+
+.middle {
+  vertical-align: middle;
 }
