--- a/app/views/layouts/_posts.html.erb
+++ b/app/views/layouts/_posts.html.erb
@@ -1,5 +1,5 @@
 <% @posts.each do |post| %>
-  <p>
+  <p class="middle">
     <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
     <% if user_signed_in? && current_user.id != post.user_id %>
       <% if current_user.following?(post) %>
