--- a/app/views/layouts/_posts.html.erb
+++ b/app/views/layouts/_posts.html.erb
@@ -3,9 +3,9 @@
     <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link middle' %>&nbsp;
     <% if user_signed_in? && current_user.id != post.user_id %>
       <% if current_user.following?(post) %>
-        <%= link_to content_tag(:i, '', class: 'fas fa-heart'), favorite_path(id: post.id), method: :delete, class: 'hearts middle' %><!--
+        <%= link_to content_tag(:i, '', class: 'middle fas fa-heart'), favorite_path(id: post.id), method: :delete, class: 'hearts' %><!--
       --><% else %><!--
-        --><%= link_to content_tag(:i, '', class: 'far fa-heart'), favorites_path(follow: post.id), method: :post, class: 'hearts middle' %><!--
+        --><%= link_to content_tag(:i, '', class: 'middle far fa-heart'), favorites_path(follow: post.id), method: :post, class: 'hearts' %><!--
       --><% end %><!--
     --><% else %><!--
       --><i class="hearts fas fa-heart middle"></i><!--
