--- a/app/views/layouts/_posts.html.erb
+++ b/app/views/layouts/_posts.html.erb
@@ -3,12 +3,12 @@
     <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link middle' %>&nbsp;
     <% if user_signed_in? && current_user.id != post.user_id %>
       <% if current_user.following?(post) %>
-        <%= link_to content_tag(:i, '', class: 'middle fas fa-heart'), favorite_path(id: post.id), method: :delete, class: 'hearts' %><!--
+        <%= link_to content_tag(:i, '', class: 'sm middle fas fa-heart'), favorite_path(id: post.id), method: :delete, class: 'hearts' %><!--
       --><% else %><!--
-        --><%= link_to content_tag(:i, '', class: 'middle far fa-heart'), favorites_path(follow: post.id), method: :post, class: 'hearts' %><!--
+        --><%= link_to content_tag(:i, '', class: 'sm middle far fa-heart'), favorites_path(follow: post.id), method: :post, class: 'hearts' %><!--
       --><% end %><!--
     --><% else %><!--
-      --><i class="hearts fas fa-heart middle"></i><!--
+      --><i class="sm hearts fas fa-heart middle"></i><!--
     --><% end %><!--
     --><span class="sm horizontal hearts middle"><%= post.followers_by_type_count('User') %></span>
     <% user = User.find(post.user_id) %>
