--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,23 +2,23 @@
 
 <div class="mt-3 vertical serif mx-auto height-110">
   <%= link_to (image_tag @user.avatar.url(:medium), align: 'center'), user_path(id: @user.id), method: :get, class: 'tanka-link' %>&nbsp;
-  <%= link_to @user.name, user_path(id: @user.id), method: :get, class: 'tanka-show tanka-link' %>&nbsp;
-  <%= @post.created_at.strftime('%Y.%-m.%-d') %>&nbsp;
+  <%= link_to @user.name, user_path(id: @user.id), method: :get, class: 'middle tanka-show tanka-link' %>&nbsp;
+  <span class="middle"><%= @post.created_at.strftime('%Y.%-m.%-d') %></span>&nbsp;
   <% if @user.twitter_id.present? %>
-    <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + @post.tanka + '%0a／' + @user.name + '%0a' %>"><i class="tanka-show fab fa-twitter"></i></a>&nbsp;
+    <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + @post.tanka + '%0a／' + @user.name + '%0a' %>"><i class="middle tanka-show fab fa-twitter"></i></a>&nbsp;
   <% end %>
   <% if user_signed_in? && current_user.id != @post.user_id %>
     <% if current_user.following?(@post) %>
-      <%= link_to content_tag(:i, '', class: 'fas fa-heart'), favorite_path(id: @post.id), method: :delete, class: 'hearts tanka-show' %><!--
+      <%= link_to content_tag(:i, '', class: 'tanka-show middle fas fa-heart'), favorite_path(id: @post.id), method: :delete, class: 'hearts' %><!--
     --><% else %><!--
-      --><%= link_to content_tag(:i, '', class: 'far fa-heart'), favorites_path(follow: @post.id), method: :post, class: 'hearts tanka-show' %><!--
+      --><%= link_to content_tag(:i, '', class: 'tanka-show middle far fa-heart'), favorites_path(follow: @post.id), method: :post, class: 'hearts' %><!--
     --><% end %><!--
   --><% else %><!--
-    --><i class="hearts tanka-show fas fa-heart"></i><!--
+    --><i class="middle hearts tanka-show fas fa-heart"></i><!--
   --><% end %><!--
-  --><%= link_to @post.followers_by_type_count('User'), follower_post_path(id: @post.id), method: :get, class: 'horizontal hearts tanka-show' %>
+  --><%= link_to @post.followers_by_type_count('User'), follower_post_path(id: @post.id), method: :get, class: 'middle horizontal hearts tanka-show' %>
   <% if @user == current_user %>
-    <%= link_to '削除', @tanka, method: :delete, data: { confirm: '本当に削除しますか？' } %>
+    <%= link_to '削除', @tanka, method: :delete, data: { confirm: '本当に削除しますか？' }, class: 'middle' %>
   <% end %>
   <p class="tanka-show"><%= @post.tanka %></p>
 </div>
